--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "feedback-widget",
+  "name": "react-embedable-widget",
   "version": "1.0.0",
   "private": true,
   "homepage": "https://github.com/SujalShah3234/react-widget-template",
@@ -31,7 +31,6 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^6.0.1",
     "parcel-bundler": "^1.12.5",
     "styled-components": "^5.3.0",
     "@testing-library/jest-dom": "^5.14.1",
