--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Sujal Shah",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-rating-stars-component": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
